# audit-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.old.yml  docker-compose.yml  setup-compose.py  setup.sh
.github/workflows/: deploy_to_dev.yml
auditors/: Cargo.toml  Dockerfile  setup.sh
auditors/src/: lib.rs  main.rs
auditors/src/error/: mod.rs
auditors/src/handlers/: auditor.rs  badge.rs  bage.rs  indexer.rs  mod.rs
auditors/src/repositories/: auditor.rs
auditors/src/service/: auditor.rs  badge.rs  bage.rs  indexer.rs  mod.rs
auditors/templates/: code.txt  code_subject.txt  new_user.txt
audits/: Cargo.toml  Dockerfile  setup.sh
audits/src/: contants.rs  error.rs  lib.rs  main.rs  migrations.rs
audits/src/handlers/: audit.rs  audit_request.rs  mod.rs
audits/src/repositories/: audit.rs  audit_request.rs  closed_audits.rs  closed_request.rs  mod.rs
audits/src/service/: audit.rs  audit_request.rs  issue.rs  mod.rs
audits/templates/: audit_is_about_to_finish.txt  audit_is_about_to_start.txt  audit_issue_comment.txt  audit_issue_comment_auditor.txt  audit_issue_comment_customer.txt  audit_issue_disclosed.txt  audit_issue_status_change.txt  audit_issue_status_change_auditor.txt  audit_issue_status_change_customer.txt  audit_request_decline_customer.txt  audit_submited.txt  audit_submitted.txt  badge_link.txt  new_audit_offer.txt  new_audit_request.txt
chat/: Cargo.toml  Dockerfile  setup.sh
chat/src/: lib.rs  main.rs
chat/src/handlers/: chat.rs
chat/src/repositories/: chat.rs
chat/src/services/: chat.rs
cloc/: Cargo.toml  Dockerfile  setup.sh
cloc/src/: lib.rs  main.rs
cloc/src/handlers/: cloc.rs  mod.rs
cloc/src/repositories/: file_repo.rs  mod.rs
cloc/src/services/: mod.rs
common/: Cargo.toml
common/src/: access_rules.rs  api.rs  auth.rs  auth_session.rs  constants.rs  context.rs  error.rs  inner_error.rs  lib.rs  retry.rs  ruleset.rs  services.rs  user.rs  verification.rs
common/src/api/: auditor.rs  audits.rs  badge.rs  chat.rs  codes.rs  customer.rs  events.rs  file.rs  issue.rs  linked_accounts.rs  mail.rs  mod.rs  notifications.rs  organization.rs  project.rs  report.rs  requests.rs  seartch.rs  user.rs
common/src/context/: context_trait.rs  effectfull_context.rs  mod.rs  test_context.rs
common/src/entities/: audit.rs  audit_request.rs  auditor.rs  badge.rs  bage.rs  contacts.rs  customer.rs  file.rs  issue.rs  letter.rs  mod.rs  notification.rs  organization.rs  project.rs  rating.rs  role.rs  scope.rs  user.rs  view.rs
common/src/repository/: http_repository.rs  mod.rs  mongo_repository.rs  test_repository.rs
customers/: Cargo.toml  Dockerfile  setup.sh
customers/src/: error.rs  lib.rs  main.rs  migrations.rs
customers/src/handlers/: customer.rs  customers.rs  indexer.rs  mod.rs  project.rs  projects.rs
customers/src/repositories/: customer.rs  project.rs
customers/src/service/: customer.rs  indexer.rs  mod.rs  project.rs
event/: Cargo.toml  setup.sh
event/src/: lib.rs  main.rs
event/src/handlers/: event.rs  mod.rs
event/src/service/: event.rs
files/: Cargo.toml  setup.sh
files/src/: lib.rs  main.rs
files/src/handlers/: file.rs  indexer.rs  mod.rs
files/src/repositories/: files.rs  meta.rs  mod.rs
files/src/service/: file.rs
mail/: Cargo.toml  setup.sh
mail/src/: lib.rs  main.rs
mail/src/handlers/: codes.rs  indexer.rs  mail.rs  mod.rs
mail/src/service/: codes.rs  mail.rs  mod.rs
mail/templates/: footer.txt  header.txt
mongo/: Dockerfile  auto_dump.sh  crontab.txt
notification/: Cargo.toml  setup.sh
notification/src/: access_rules.rs  lib.rs  main.rs
notification/src/handlers/: indexer.rs  notifications.rs
notification/src/repositories/: notifications.rs
notification/src/service/: notifications.rs
rating/: Cargo.toml  setup.sh
rating/src/: lib.rs  main.rs
rating/src/handlers/: mod.rs  rating.rs
rating/src/service/: rating.rs
renderer/: .babelrc  .env.example  .gitignore  .prettierrc  Dockerfile  README.MD  package-lock.json  package.json  setup.sh
renderer/server/: index.js
renderer/server/assets/: index.js
renderer/server/assets/styles/: fonts.css  style.css
renderer/server/constants/: base64.js  reportBlockTypes.js  reportLink.js
renderer/server/controllers/: report.js
renderer/server/controllers/report/: createTOC.js  report.js
renderer/server/controllers/report/utils/: addBackgroundToPage.js  createPageLinkAnnotation.js  (+2 more)
renderer/server/routes/: report.js
renderer/server/utils/: getPageForStrings.js  linkShortener.js  reactRender.js
renderer/server/views/: footer.js  html.js
renderer/server/views/images/: AuditDBLogo.js  CornerLogo.js  HeroLogo.js  LogoQRbase64.js
renderer/server/views/report/: ProjectData.js  RenderMarkdown.js  ReportBlocks.js  TitleLabel.js  TitlePage.js
report/: Cargo.toml  Dockerfile  setup.sh
report/src/: lib.rs  main.rs
report/src/handlers/: report.rs
report/src/service/: report.rs
report/templates/: disclaimer.md  disclamer.txt
search/: Cargo.toml  setup.sh
search/src/: lib.rs  main.rs
search/src/handlers/: search.rs
search/src/repositories/: elasticsearch.rs  mod.rs  search.rs  since.rs
search/src/service/: search.rs
swagger/: Cargo.toml  Dockerfile  setup.sh
swagger/src/: main.rs
swagger/src/swagger_tricks/: mod.rs
telemetry/: Cargo.toml  setup.sh
telemetry/src/: lib.rs  main.rs
telemetry/src/handler/: ping.rs
telemetry/src/service/: ping.rs
users/: Cargo.toml  Dockerfile  build.rs  setup.sh
users/src/: constants.rs  error.rs  lib.rs  main.rs  ruleset.rs
users/src/error/: mod.rs
users/src/handlers/: auth.rs  indexer.rs  mod.rs  organization.rs  user.rs  waiting_list.rs
users/src/repositories/: list_element.rs  mod.rs  token.rs  user.rs
users/src/service/: auth.rs  indexer.rs  mod.rs  organization.rs  user.rs  waiting_list.rs
users/src/utils/: jwt.rs  mod.rs  prelude.rs
users/templates/: code.txt  link.txt  organization_invite.txt  password_change.txt  waiting-letter.txt  welcome.txt
(+6 files in other folders)
