[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = "1"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.25"
chrono = "0.4.23"
awc = {version = "3.0.1", features = ["openssl"]}
utoipa = { version = "3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
common = {path = "../common"}
tokio = "1.32.0"
mongodb-migrator = "0.1"
dotenv = "0.15.0"


[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]


