[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = "1.0.152"
jsonwebtoken = "8"
awc = "3.0.1"
reqwest = { version = "0.11", features = ["json"] }
utoipa = { version = "3.0.2", features = ["actix_extras"] }
derive_more = "0.99.17"
chrono = {version = "0.4", features = ["serde"]}
async-trait = "0.1.64"
futures = "0.3.17"


[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime", "bson-chrono-0_4"]
