[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = "1.0.152"
jsonwebtoken = "8"
awc = "3.0.1"
reqwest = { version = "0.11", features = ["json"] }
utoipa = { version = "3.0.2", features = ["actix_extras"] }
derive_more = "0.99.17"
chrono = {version = "0.4", features = ["serde"]}
async-trait = "0.1.64"
futures = "0.3.17"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
serde_json = "1.0.105"
jsonwebkey = {version = "0.3.5", features = ["generate", "jwt-convert"]}
lazy_static = "1.4.0"
type-map = "0.5"
anyhow = "1"
once_cell = "1"
futures-util = "0.3"
log = "0.4.17"
ureq = {version = "2.7.1", features = ["json"]}
regex = "1.10.3"
rand = "0.8.5"
sha256 = "1.1.2"
rust-crypto = "0.2.36"
tokio = "1.32.0"


[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]
