[package]
name = "customers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = "1"
serde_json = "1"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.17"
utoipa = { version = "3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
futures = "0.3.25"
common = {path = "../common"}
chrono = "0.4.23"
mongodb-migrator = "0.1"
async-trait = "0.1"
anyhow = "1"
dotenv = "0.15.0"



[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]

[build-dependencies]
serde = { version = "1.0.156", features = ["derive"] }
async-trait = "0.1.66"
anyhow = "1.0.69"


[build-dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]