[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = "1"
derive_more = "0.99.17"
jsonwebtoken = "8"
chrono = {version = "0.4", features = ["serde"]}
lazy_static = "1.4.0"
futures = "0.3.25"
env_logger = "0.10.0"
log = "0.4.17"
utoipa = { version = "3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
actix-multipart = "0.6.0"
actix-multipart-derive = "0.6.0"
actix-files = "0.6.2"
futures-util = "0.3.26"
anyhow = "1"
common = {path = "../common"}
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]
