[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "4.2.0"
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix = "0.13.0"
anyhow = "1"
common = { path = "../common" }