[package]
name = "rating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
anyhow = "1"
chrono = "0.4.23"
dotenv = "0.15"
env_logger = "0.10.0"
derive_more = "0.99.17"
lazy_static = "1.4"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0"
common = { path = "../common" }

[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]
