[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0" }
actix-web = "4.2.1"
actix-multipart = "0.6.0"
actix-multipart-derive = "0.6.0"
actix-files = "0.6.2"
anyhow = "1.0.44"
serde = "1"
