[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
actix-web = "4.2.1"
actix-multipart = "0.6.0"
actix-multipart-derive = "0.6.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
anyhow = "1.0.44"
serde = {version = "1", features = ["derive"]}
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3.27"