[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
actix-web = "4.2"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-files = "0.6"
actix-cors = "0.6"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
env_logger = "0.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
common = { path = "../common" }
dotenv = "0.15.0"
sha256 = "1.1.2"
