[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = "1.0.152"
derive_more = "0.99.17"
jsonwebtoken = "8"
chrono = {version = "0.4", features = ["serde"]}
lazy_static = "1.4.0"
futures = "0.3.25"
env_logger = "0.10.0"
log = "0.4.17"
utoipa = { version = "3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
async-trait = "0.1.64"
futures-util = "0.3.26"
common = {path = "../common"}
serde_json = "1.0.94"
reqwest = "0.11.14"
anyhow = "1"

[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]

[build-dependencies]
serde = { version = "1.0.156", features = ["derive"] }
async-trait = "0.1.66"
anyhow = "1.0.69"


[build-dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]