[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
mongodb = {version = "2.3.1", feautres = ["chrono-0.4"]}
serde = "1.0.152"
uuid = "1.2.2"
jsonwebtoken = "8"
chrono = "0.4.23"
lazy_static = "1.4.0"