[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = "1.0.152"
uuid = "1.2.2"
derive_more = "0.99.17"
jsonwebtoken = "8"
chrono = {version = "0.4", features = ["serde"]}
lazy_static = "1.4.0"
futures = "0.3.25"
env_logger = "0.10.0"
log = "0.4.17"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
common = {path = "../common"}


[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime", "bson-chrono-0_4"]
