[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = "1.0.152"
uuid = "1.2.2"
derive_more = "0.99.17"
jsonwebtoken = "8"
chrono = {version = "0.4", features = ["serde"]}
lazy_static = "1.4.0"
futures = "0.3.25"
env_logger = "0.10.0"
log = "0.4.17"
async-trait = "0.1.64"
futures-util = "0.3.26"
common = {path = "../common"}
serde_json = "1"
lettre = "0.10.3"
regex = "1.7.1"
rand = "0.8.5"
sha256 = "1.1.2"
anyhow = "1"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }


[dependencies.mongodb]
version = "2.3.1"
features = ["bson-chrono-0_4"]



[features]
test_server = []